compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@const_fn.snap
---
source: compiler/lume_parser/src/tests.rs
assertion_line: 99
expression: "parse(Target :: Item, \"const fn foo() {}\")"
---
SOURCE_FILE@0..17
  FN@0..17
    CONSTNESS@0..5
      CONST_KW@0..5 "const"
    WHITESPACE@5..6 " "
    SIG@6..14
      FN_KW@6..8 "fn"
      WHITESPACE@8..9 " "
      NAME@9..12
        IDENT@9..12 "foo"
      PARAM_LIST@12..14
        LEFT_PAREN@12..13 "("
        RIGHT_PAREN@13..14 ")"
    WHITESPACE@14..15 " "
    BLOCK@15..17
      LEFT_BRACE@15..16 "{"
      RIGHT_BRACE@16..17 "}"
