compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@external_body.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn external main() -> Void {}\")"
---
SOURCE_FILE@0..29
  FN@0..29
    SIG@0..29
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      EXTERN_KW@3..11 "external"
      WHITESPACE@11..12 " "
      NAME@12..16
        IDENT@12..16 "main"
      PARAM_LIST@16..18
        LEFT_PAREN@16..17 "("
        RIGHT_PAREN@17..18 ")"
      WHITESPACE@18..19 " "
      RETURN_TYPE@19..27
        ARROW@19..21 "->"
        WHITESPACE@21..22 " "
        NAMED_TYPE@22..27
          PATH@22..27
            PATH_TYPE@22..27
              NAME@22..26
                IDENT@22..26 "Void"
              WHITESPACE@26..27 " "
      LEFT_BRACE@27..28 "{"
      RIGHT_BRACE@28..29 "}"

external items cannot have bodies@27..28
