compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@internal_modifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"pub(internal) fn main() -> Void {}\")"
---
SOURCE_FILE@0..34
  FN@0..34
    VISIBILITY@0..13
      PUB_KW@0..3 "pub"
      LEFT_PAREN@3..4 "("
      INTERNAL_KW@4..12 "internal"
      RIGHT_PAREN@12..13 ")"
    WHITESPACE@13..14 " "
    SIG@14..32
      FN_KW@14..16 "fn"
      WHITESPACE@16..17 " "
      NAME@17..21
        IDENT@17..21 "main"
      PARAM_LIST@21..23
        LEFT_PAREN@21..22 "("
        RIGHT_PAREN@22..23 ")"
      WHITESPACE@23..24 " "
      RETURN_TYPE@24..32
        ARROW@24..26 "->"
        WHITESPACE@26..27 " "
        NAMED_TYPE@27..32
          PATH@27..32
            PATH_TYPE@27..32
              NAME@27..31
                IDENT@27..31 "Void"
              WHITESPACE@31..32 " "
    BLOCK@32..34
      LEFT_BRACE@32..33 "{"
      RIGHT_BRACE@33..34 "}"
