compiler/lume_parser/src/snapshots/lume_parser__tests__function_definition_snapshots@no_return_type.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"fn main() {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private {
                location: Location(
                    0..0,
                ),
            },
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: None,
            block: Block {
                statements: [],
                location: Location(
                    10..12,
                ),
            },
            location: Location(
                0..12,
            ),
            documentation: None,
        },
    ),
]
