compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@empty_generics.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Test<> {}\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                visibility: Private {
                    location: Location(
                        0..0,
                    ),
                },
                name: Identifier {
                    name: "Test",
                    location: Location(
                        5..9,
                    ),
                },
                type_parameters: [],
                cases: [],
                location: Location(
                    0..14,
                ),
                documentation: None,
            },
        ),
    ),
]
