compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@missing_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"enum Test<T1 T2> {}\")"
---
SOURCE_FILE@0..19
  ENUM@0..19
    ENUM_KW@0..4 "enum"
    WHITESPACE@4..5 " "
    NAME@5..9
      IDENT@5..9 "Test"
    BOUND_TYPES@9..16
      LESS@9..10 "<"
      BOUND_TYPE@10..12
        NAME@10..12
          IDENT@10..12 "T1"
      WHITESPACE@12..13 " "
      IDENT@13..15 "T2"
      GREATER@15..16 ">"
    WHITESPACE@16..17 " "
    LEFT_BRACE@17..18 "{"
    RIGHT_BRACE@18..19 "}"

expected COMMA@13..15
