compiler/lume_parser/src/snapshots/lume_parser__tests__generic_enum_snapshots@multiple_generics.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse(\"enum Test<T1, T2> {}\")"
---
[
    EnumDefinition(
        EnumDefinition {
            visibility: None,
            name: Identifier {
                name: "Test",
                location: Location(
                    5..9,
                ),
            },
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "T1",
                        location: Location(
                            10..12,
                        ),
                    },
                    constraints: [],
                },
                TypeParameter {
                    name: Identifier {
                        name: "T2",
                        location: Location(
                            14..16,
                        ),
                    },
                    constraints: [],
                },
            ],
            cases: [],
            location: Location(
                0..20,
            ),
            documentation: None,
        },
    ),
]
